# CCAR

./: CMakeLists.txt  README.md  layout.txt  readme.md  run.txt  usage.md
include/: aggregator.hpp  distributions.hpp  io.hpp  rng.hpp  simulator.hpp  types.hpp
src/: aggregator.cpp  distributions.cpp  io.cpp  main.cpp  simulator.cpp
